--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,34 +7,25 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/btnFesterval"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="切换节日图标"
-        android:layout_marginTop="50dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
-
-    <Button
-        android:id="@+id/btnNomal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="切换普通图标"
+    <ImageView
+        android:id="@+id/ivIconFesterval"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/ic_festerval"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnFesterval"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="30dp"/>
 
     <ImageView
-        android:id="@+id/ivIcon"
+        android:id="@+id/ivIconNomal"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:scaleType="centerCrop"
         android:src="@mipmap/ic_nomal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnNomal"
+        app:layout_constraintTop_toBottomOf="@id/ivIconFesterval"
         android:layout_marginTop="30dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
